--- a/PrinterySystem/Views/Shared/_LayoutSysManager.cshtml
+++ b/PrinterySystem/Views/Shared/_LayoutSysManager.cshtml
@@ -52,7 +52,7 @@
                 <div class="dropdown-menu">
                     <a class="dropdown-item" href="@Url.Action("MyInfo","Person4Manager")">个人信息</a>
                     <a class="dropdown-item" href="#">修改密码</a>
-                    <a class="dropdown-item" href="@Url.Action("MyInfoEdit","Person4Manager")">退出</a>
+                    <a class="dropdown-item" href="@Url.Action("Login","Account")">退出</a>
                 </div>
             </div>
         </div>
