--- a/PrinterySystem/Views/Manager/WorkflowManagement.cshtml
+++ b/PrinterySystem/Views/Manager/WorkflowManagement.cshtml
@@ -42,7 +42,7 @@
                     <h4 class="my-0 font-weight-normal">采购处理</h4>
                 </div>
                 <div class="card-body">
-                    <h1 class="card-title pricing-card-title">管理采购提交订单</small></h1>
+                    <h1 class="card-title pricing-card-title">管理采购提交订单</h1>
                     <ul class="list-unstyled mt-3 mb-4">
                         <li>已创建：31312</li>
                         <li>已处理:123121</li>
